feat: Add web interface for Shelly configuration

--- a/shelly_wifikonfigurator/Dockerfile
+++ b/shelly_wifikonfigurator/Dockerfile
@@ -1,15 +1,11 @@
-ARG GHCR_TOKEN
 FROM python:3.11-slim
 
-RUN apt-get update && \
-    apt-get install -y jq libdbus-1-dev && \
-    apt-get clean
+WORKDIR /data
 
-RUN pip install pydbus requests
+COPY . /data
 
-COPY shelly_configurator.py /
-COPY run.sh /
+RUN pip install --no-cache-dir Flask pydbus requests
 
-RUN chmod a+x /run.sh
+RUN chmod a+x /data/run.sh
 
-CMD [ "/run.sh" ]
+ENTRYPOINT [ "/data/run.sh" ]
