--- a/shelly_wifikonfigurator/config.json
+++ b/shelly_wifikonfigurator/config.json
@@ -1,35 +1,30 @@
 {
-  "name": "Shelly WiFi Konfigurator",
+  "name": "Shelly WIFIKonfigurator",
   "version": "0.1.0",
   "slug": "shelly_wifikonfigurator",
-  "description": "Konfiguriert Shelly-Geräte über ihren AP mit Ihren WLAN-Zugangsdaten.",
-  "url": "https://github.com/0711smarthome/ShellyWIFIKonfigurator2",
+  "description": "Konfigurieren Sie Shelly-Geräte über den Hotspot",
   "arch": [
     "aarch64",
     "amd64",
-    "armhf",
-    "armv7"
+    "armv7",
+    "i386"
   ],
-  "init": false,
-  "options": {
-    "your_wifi_ssid": "",
-    "your_wifi_password": ""
-  },
-  "schema": {
-    "your_wifi_ssid": "str",
-    "your_wifi_password": "str"
-  },
   "startup": "once",
   "boot": "manual",
-  "image": "ghcr.io/0711smarthome/shelly-wifikonfigurator2-{arch}",
-  "host_network": true,
-  "hassio_api": true,
-  "privileged": [
-    "NET_ADMIN",
-    "IPC_LOCK"
-  ],
-  "host_pid": true,
-  "build": {
-    "secrets": ["ghcr-token"]
-  }
+  "ingress": true,
+  "panel_icon": "mdi:wifi",
+  "panel_title": "Shelly Konfigurator",
+  "homeassistant_api": true,
+  "options": {
+    "WIFI_SSID": "",
+    "WIFI_PASSWORD": ""
+  },
+  "schema": {
+    "WIFI_SSID": "str",
+    "WIFI_PASSWORD": "str"
+  },
+  "ports": {
+    "8099/tcp": null
+  },
+  "image": "ghcr.io/0711smarthome/shelly-wifikonfigurator2-{arch}"
 }
