fix: Use correct multi-arch image name in config.json

--- a/shelly_wifikonfigurator/config.json
+++ b/shelly_wifikonfigurator/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Shelly WIFIKonfigurator",
-  "version": "0.2.0",
+  "version": "0.2c.0",
   "slug": "shelly_wifikonfigurator",
   "description": "Konfigurieren Sie Shelly-Geräte über den Hotspot",
   "arch": [
@@ -26,5 +26,5 @@
   "ports": {
     "8099/tcp": null
   },
-  "image": "ghcr.io/0711smarthome/shelly-wifikonfigurator2-{arch}"
+  "image": "ghcr.io/0711smarthome/shelly-wifikonfigurator2"
 }
