fix: Correct version number to 0.2.0

--- a/shelly_wifikonfigurator/config.json
+++ b/shelly_wifikonfigurator/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Shelly WIFIKonfigurator",
-  "version": "0.2c.0",
+  "version": "0.2.0",
   "slug": "shelly_wifikonfigurator",
   "description": "Konfigurieren Sie Shelly-Geräte über den Hotspot",
   "arch": [
