feat: Use explicit COPY commands in Dockerfile for greater stability

--- a/shelly_wifikonfigurator/Dockerfile
+++ b/shelly_wifikonfigurator/Dockerfile
@@ -2,15 +2,20 @@ FROM python:3.11-slim
 
 WORKDIR /data
 
-# Kopiert die Startdatei
-COPY run.sh /usr/local/bin/run.sh
+# Kopiert die Startdatei run.sh
+COPY run.sh /data/run.sh
 
-# Kopiert den Rest der Dateien
-COPY . /data
+# Kopiert die Hauptanwendung
+COPY shelly_configurator.py /data/shelly_configurator.py
 
-# Stellt sicher, dass das Skript ausführbar ist
-RUN chmod a+x /usr/local/bin/run.sh
+# Kopiert den templates-Ordner
+COPY templates/ /data/templates/
 
+# Stellt sicher, dass die Skripte ausführbar sind
+RUN chmod a+x /data/run.sh
+
+# Installiert Python-Abhängigkeiten
 RUN pip install --no-cache-dir Flask pydbus requests
 
-ENTRYPOINT [ "/usr/local/bin/run.sh" ]
+# Definiert den Startpunkt des Containers
+ENTRYPOINT [ "/data/run.sh" ]
