feat: Final fix for Dockerfile by embedding run.sh

--- a/shelly_wifikonfigurator/Dockerfile
+++ b/shelly_wifikonfigurator/Dockerfile
@@ -2,17 +2,18 @@ FROM python:3.11-slim
 
 WORKDIR /data
 
-# Kopiert die Startdatei run.sh
-COPY run.sh /data/run.sh
+# Erstellt die Startdatei direkt im Container
+RUN echo "#!/bin/bash" > /data/run.sh
+RUN echo "python3 /data/shelly_configurator.py" >> /data/run.sh
+
+# Macht die Startdatei ausführbar
+RUN chmod a+x /data/run.sh
 
 # Kopiert die Hauptanwendung
 COPY shelly_configurator.py /data/shelly_configurator.py
 
 # Kopiert den templates-Ordner
 COPY templates/ /data/templates/
-
-# Stellt sicher, dass die Skripte ausführbar sind
-RUN chmod a+x /data/run.sh
 
 # Installiert Python-Abhängigkeiten
 RUN pip install --no-cache-dir Flask pydbus requests
