--- a/shelly-addon/config.json
+++ b/shelly-addon/config.json
@@ -15,6 +15,7 @@
   "panel_icon": "mdi:wifi",
   "panel_title": "Shelly Konfigurator",
   "host_network": true,
+  "dbus": true,
   "homeassistant_api": true,
   "options": {
     "WIFI_SSID": "",
